# GLYZE

./: .gitignore  LICENSE  MCT8_10esterification - Sheet1.csv  README.md  citation.cff  deodorization_demo.ipynb  deodorizer.py  pyproject.toml  references.bib  test_deodorizer.py  tester_chem_processor.ipynb  testing.ipynb  testing_chem.ipynb
scripts/: cm5_menu.txt  esterification_tester.ipynb  example_file.py  fchk_to_pdb.py
src/: chem_processor.py  gaussian.py  glyceride.py  glyceride_mix.py  slurm_file.py  slurm_header.py
src/glyze/: __init__.py  __main__.py  analysis.py  backend.py  chem_processor.py  deodorization_demo.py  e_viscosity_model.py  gamess.py  gaussian.py  glyceride.py  glyceride_mix.py  gromacs.py  gromacs_topgen.py  opls_glyceride.json  packmol.py  slurm_file.py  slurm_header.py  utils.py
src/glyze.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/glyze/chem_processor/: __init__.py  chem_processor.py  deodorizer.py  dsc.py  esterifier.py  interesterifier.py  p_kinetic_sim.py  plot_demo.py  viscosity_calculator.py
src/glyze/ui/: Home.py  ui.py
src/glyze/ui/.streamlit/: config.toml
src/glyze/ui/pages/: Batch_Reactor.py  Chem_Processor.py  Deodorizer.py  Glyceride_Mix.py  SFC_Calculator.py  Viscosity_Model.py
