[project]
name = "glyze"
version = "1.0.0"
description = """
GLYZE is a python package designed for the study of glycerides.
Currently, the package's primary use has been to study the viscosity and melting
points of various glycerides using molecular dynamics and various empirical models.
The package also allows you to model various chemical processes often associated with
glycerides such as interesterification and esterification.
"""
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Isaac Perez", email = "iperez@g.hmc.edu" },
  { name = "Ian Osborne", email = "iosborne@g.hmc.edu" },
  { name = "XiaoLen Deng", email = "xdeng@g.hmc.edu" },
  { name = "Avery Smith", email = "avsmith@g.hmc.edu" },
  { name = "Stryker Scales", email = "sscales@g.hmc.edu" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
  "ase==3.26.0",
  "matplotlib==3.10.8",
  "mdanalysis==2.10.0",
  "natsort==8.4.0",
  "numpy==2.4.4",
  "ordered_set==4.1.0",
  "pandas==2.3.3",
  "plotly==6.5.0",
  "rdkit==2025.9.1",
  "scipy==1.17.1",
  "streamlit==1.51.0",
  "tabulate==0.9.0",
]

[project.scripts]
glyze = "glyze.__main__:main"

[project.optional-dependencies]
dev = [
  "black>=22.3",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"glyze" = ["opls_glyceride.json"]


